Remove bullet points from social media icons
- Added CSS rules targeting ul.social-icons and ul.network-icon
- Applied list-style: none and padding-left: 0
- Social media icons will now display cleanly without bullets

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -21,6 +21,16 @@ ul li, ol li {
   margin-bottom: 0.5rem;
 }
 
+/* Remove bullet points from social media icons */
+ul.social-icons, ul.network-icon {
+  list-style: none !important;
+  padding-left: 0 !important;
+}
+
+ul.social-icons li, ul.network-icon li {
+  list-style: none !important;
+}
+
 /* Enhanced styling for about section - clean and minimal */
 
 /* Better spacing for bio sections */
